// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InitDrone shows drone prepared message after pressing prepare 1`] = `
<div>
  <div>
    <div
      class="bg-blue-100 border-l-4 border-blue-500 text-blue-700 p-4 mt-5"
      role="alert"
    >
      <p>
        Du har nu förberett din bokning. Vi notifierar dig när det är dags att packa drönaren.
      </p>
    </div>
    <button
      class="w-full text-xs bg-blue-400 hover:bg-blue-500 text-white font-semibold
        py-3 px-4 rounded tracking-wide border border-blue-400 hover:border-blue-500 mt-5 mt-4 bg-green-400 hover:bg-green-500 mt-5"
      type="button"
    >
      Boka resa
    </button>
  </div>
</div>
`;

exports[`InitDrone shows prepare button initially 1`] = `
<div>
  <div>
    <button
      class="w-full text-xs bg-blue-400 hover:bg-blue-500 text-white font-semibold
        py-3 px-4 rounded tracking-wide border border-blue-400 hover:border-blue-500 mt-5 mt-5"
      type="button"
    >
      Förbered bokning
    </button>
  </div>
</div>
`;
